feat(oracle): support configurable client character set
- add an Oracle clientCharset datasource option with localized descriptions
- allow selecting common Oracle character sets or entering a custom value
- propagate the configured charset through session hooks and column readers
- decode CHAR and VARCHAR2 values from their raw Oracle bytes
- resolve Oracle character-set IDs through NLS_CHARSET_ID and cache the results
- preserve the JDBC default decoding behavior when clientCharset is unset